--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-scripts": "2.1.1",
     "typescript": "3.1.6"
   },
+  "resolutions": {
+    "@types/react": "16.7.7"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
